# leds4sim

./: CMakeLists.txt  README.md  scs-telemetry-common.ods
conf/: leds4sim.conf
debian/: changelog  control  copyright  gbp.conf  leds4sim.docs
src/: indicator.cpp  indicator.h  main.cpp  threshold.cpp  threshold.h
src/moza_protocol/: get_reply.cpp  get_reply.h  proto.cpp  proto.h  rgb.cpp  rgb.h
